Phase4/obj/y.output
Terminals which are not used

   ERROR
   ILLEGAL_TOK


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: decl
    3         | declList decl

    4 decl: varDecl
    5     | funDecl

    6 varDecl: typeSpecifier ID SEMICLN
    7        | typeSpecifier ID arrayDecl SEMICLN

    8 funcTypeName: typeSpecifier ID

    9 typeSpecifier: KWD_INT
   10              | KWD_CHAR
   11              | KWD_VOID

   12 funDecl: funcTypeName LPAREN RPAREN funBody
   13        | funcTypeName LPAREN formalDeclList RPAREN funBody

   14 formalDeclList: formalDecl
   15               | formalDeclList COMMA formalDecl

   16 formalDecl: typeSpecifier ID
   17           | typeSpecifier ID LSQ_BRKT RSQ_BRKT

   18 arrayDecl: LSQ_BRKT INTCONST RSQ_BRKT

   19 funBody: LCRLY_BRKT localDeclList statementList RCRLY_BRKT

   20 localDeclList: /* empty */
   21              | varDecl localDeclList

   22 statementList: /* empty */
   23              | statement statementList

   24 statement: compoundStmt
   25          | assignStmt
   26          | condStmt
   27          | loopStmt
   28          | returnStmt
   29          | expression SEMICLN

   30 compoundStmt: LCRLY_BRKT statementList RCRLY_BRKT

   31 assignStmt: var OPER_ASGN expression SEMICLN

   32 forAssign: var OPER_ASGN expression

   33 condStmt: KWD_IF LPAREN expression RPAREN statement
   34         | KWD_IF LPAREN expression RPAREN statement KWD_ELSE statement

   35 loopStmt: KWD_WHILE LPAREN expression RPAREN statement
   36         | KWD_FOR LPAREN forAssign SEMICLN expression SEMICLN forAssign RPAREN statement

   37 returnStmt: KWD_RETURN SEMICLN
   38           | KWD_RETURN expression SEMICLN

   39 var: ID
   40    | ID LSQ_BRKT addExpr RSQ_BRKT

   41 expression: addExpr
   42           | expression relop addExpr

   43 relop: OPER_LTE
   44      | OPER_LT
   45      | OPER_GT
   46      | OPER_GTE
   47      | OPER_EQ
   48      | OPER_NEQ

   49 addExpr: term
   50        | addExpr addop term

   51 addop: OPER_ADD
   52      | OPER_SUB

   53 term: factor
   54     | term mulop factor

   55 mulop: OPER_MUL
   56      | OPER_DIV

   57 factor: LPAREN expression RPAREN
   58       | var
   59       | funCallExpr
   60       | INTCONST
   61       | CHARCONST

   62 @1: /* empty */

   63 funCallExpr: ID LPAREN @1 argList RPAREN

   64 @2: /* empty */

   65 funCallExpr: ID LPAREN @2 RPAREN

   66 argList: expression
   67        | argList COMMA expression


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 6 7 8 16 17 39 40 63 65
INTCONST (259) 18 60
CHARCONST (260) 61
KWD_INT (261) 9
KWD_CHAR (262) 10
KWD_VOID (263) 11
KWD_WHILE (264) 35
KWD_RETURN (265) 37 38
KWD_IF (266) 33 34
KWD_ELSE (267) 34
KWD_FOR (268) 36
LSQ_BRKT (269) 17 18 40
RSQ_BRKT (270) 17 18 40
LCRLY_BRKT (271) 19 30
RCRLY_BRKT (272) 19 30
LPAREN (273) 12 13 33 34 35 36 57 63 65
RPAREN (274) 12 13 33 34 35 36 57 63 65
COMMA (275) 15 67
SEMICLN (276) 6 7 29 31 36 37 38
OPER_LTE (277) 43
OPER_LT (278) 44
OPER_DIV (279) 56
OPER_GT (280) 45
OPER_GTE (281) 46
OPER_EQ (282) 47
OPER_ASGN (283) 31 32
OPER_NEQ (284) 48
OPER_ADD (285) 51
OPER_SUB (286) 52
OPER_MUL (287) 55
ERROR (288)
ILLEGAL_TOK (289)
LOWER_THAN_ELSE (290)


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
declList (38)
    on left: 2 3, on right: 1 3
decl (39)
    on left: 4 5, on right: 2 3
varDecl (40)
    on left: 6 7, on right: 4 21
funcTypeName (41)
    on left: 8, on right: 12 13
typeSpecifier (42)
    on left: 9 10 11, on right: 6 7 8 16 17
funDecl (43)
    on left: 12 13, on right: 5
formalDeclList (44)
    on left: 14 15, on right: 13 15
formalDecl (45)
    on left: 16 17, on right: 14 15
arrayDecl (46)
    on left: 18, on right: 7
funBody (47)
    on left: 19, on right: 12 13
localDeclList (48)
    on left: 20 21, on right: 19 21
statementList (49)
    on left: 22 23, on right: 19 23 30
statement (50)
    on left: 24 25 26 27 28 29, on right: 23 33 34 35 36
compoundStmt (51)
    on left: 30, on right: 24
assignStmt (52)
    on left: 31, on right: 25
forAssign (53)
    on left: 32, on right: 36
condStmt (54)
    on left: 33 34, on right: 26
loopStmt (55)
    on left: 35 36, on right: 27
returnStmt (56)
    on left: 37 38, on right: 28
var (57)
    on left: 39 40, on right: 31 32 58
expression (58)
    on left: 41 42, on right: 29 31 32 33 34 35 36 38 42 57 66 67
relop (59)
    on left: 43 44 45 46 47 48, on right: 42
addExpr (60)
    on left: 49 50, on right: 40 41 42 50
addop (61)
    on left: 51 52, on right: 50
term (62)
    on left: 53 54, on right: 49 50 54
mulop (63)
    on left: 55 56, on right: 54
factor (64)
    on left: 57 58 59 60 61, on right: 53 54
funCallExpr (65)
    on left: 63 65, on right: 59
@1 (66)
    on left: 62, on right: 63
@2 (67)
    on left: 64, on right: 65
argList (68)
    on left: 66 67, on right: 63 67


state 0

    0 $accept: . program $end

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    program        go to state 4
    declList       go to state 5
    decl           go to state 6
    varDecl        go to state 7
    funcTypeName   go to state 8
    typeSpecifier  go to state 9
    funDecl        go to state 10


state 1

    9 typeSpecifier: KWD_INT .

    $default  reduce using rule 9 (typeSpecifier)


state 2

   10 typeSpecifier: KWD_CHAR .

    $default  reduce using rule 10 (typeSpecifier)


state 3

   11 typeSpecifier: KWD_VOID .

    $default  reduce using rule 11 (typeSpecifier)


state 4

    0 $accept: program . $end

    $end  shift, and go to state 11


state 5

    1 program: declList .
    3 declList: declList . decl

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 1 (program)

    decl           go to state 12
    varDecl        go to state 7
    funcTypeName   go to state 8
    typeSpecifier  go to state 9
    funDecl        go to state 10


state 6

    2 declList: decl .

    $default  reduce using rule 2 (declList)


state 7

    4 decl: varDecl .

    $default  reduce using rule 4 (decl)


state 8

   12 funDecl: funcTypeName . LPAREN RPAREN funBody
   13        | funcTypeName . LPAREN formalDeclList RPAREN funBody

    LPAREN  shift, and go to state 13


state 9

    6 varDecl: typeSpecifier . ID SEMICLN
    7        | typeSpecifier . ID arrayDecl SEMICLN
    8 funcTypeName: typeSpecifier . ID

    ID  shift, and go to state 14


state 10

    5 decl: funDecl .

    $default  reduce using rule 5 (decl)


state 11

    0 $accept: program $end .

    $default  accept


state 12

    3 declList: declList decl .

    $default  reduce using rule 3 (declList)


state 13

   12 funDecl: funcTypeName LPAREN . RPAREN funBody
   13        | funcTypeName LPAREN . formalDeclList RPAREN funBody

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3
    RPAREN    shift, and go to state 15

    typeSpecifier   go to state 16
    formalDeclList  go to state 17
    formalDecl      go to state 18


state 14

    6 varDecl: typeSpecifier ID . SEMICLN
    7        | typeSpecifier ID . arrayDecl SEMICLN
    8 funcTypeName: typeSpecifier ID .

    LSQ_BRKT  shift, and go to state 19
    SEMICLN   shift, and go to state 20

    $default  reduce using rule 8 (funcTypeName)

    arrayDecl  go to state 21


state 15

   12 funDecl: funcTypeName LPAREN RPAREN . funBody

    LCRLY_BRKT  shift, and go to state 22

    funBody  go to state 23


state 16

   16 formalDecl: typeSpecifier . ID
   17           | typeSpecifier . ID LSQ_BRKT RSQ_BRKT

    ID  shift, and go to state 24


state 17

   13 funDecl: funcTypeName LPAREN formalDeclList . RPAREN funBody
   15 formalDeclList: formalDeclList . COMMA formalDecl

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


state 18

   14 formalDeclList: formalDecl .

    $default  reduce using rule 14 (formalDeclList)


state 19

   18 arrayDecl: LSQ_BRKT . INTCONST RSQ_BRKT

    INTCONST  shift, and go to state 27


state 20

    6 varDecl: typeSpecifier ID SEMICLN .

    $default  reduce using rule 6 (varDecl)


state 21

    7 varDecl: typeSpecifier ID arrayDecl . SEMICLN

    SEMICLN  shift, and go to state 28


state 22

   19 funBody: LCRLY_BRKT . localDeclList statementList RCRLY_BRKT

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 20 (localDeclList)

    varDecl        go to state 29
    typeSpecifier  go to state 30
    localDeclList  go to state 31


state 23

   12 funDecl: funcTypeName LPAREN RPAREN funBody .

    $default  reduce using rule 12 (funDecl)


state 24

   16 formalDecl: typeSpecifier ID .
   17           | typeSpecifier ID . LSQ_BRKT RSQ_BRKT

    LSQ_BRKT  shift, and go to state 32

    $default  reduce using rule 16 (formalDecl)


state 25

   13 funDecl: funcTypeName LPAREN formalDeclList RPAREN . funBody

    LCRLY_BRKT  shift, and go to state 22

    funBody  go to state 33


state 26

   15 formalDeclList: formalDeclList COMMA . formalDecl

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    typeSpecifier  go to state 16
    formalDecl     go to state 34


state 27

   18 arrayDecl: LSQ_BRKT INTCONST . RSQ_BRKT

    RSQ_BRKT  shift, and go to state 35


state 28

    7 varDecl: typeSpecifier ID arrayDecl SEMICLN .

    $default  reduce using rule 7 (varDecl)


state 29

   21 localDeclList: varDecl . localDeclList

    KWD_INT   shift, and go to state 1
    KWD_CHAR  shift, and go to state 2
    KWD_VOID  shift, and go to state 3

    $default  reduce using rule 20 (localDeclList)

    varDecl        go to state 29
    typeSpecifier  go to state 30
    localDeclList  go to state 36


state 30

    6 varDecl: typeSpecifier . ID SEMICLN
    7        | typeSpecifier . ID arrayDecl SEMICLN

    ID  shift, and go to state 37


state 31

   19 funBody: LCRLY_BRKT localDeclList . statementList RCRLY_BRKT

    ID          shift, and go to state 38
    INTCONST    shift, and go to state 39
    CHARCONST   shift, and go to state 40
    KWD_WHILE   shift, and go to state 41
    KWD_RETURN  shift, and go to state 42
    KWD_IF      shift, and go to state 43
    KWD_FOR     shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    $default  reduce using rule 22 (statementList)

    statementList  go to state 47
    statement      go to state 48
    compoundStmt   go to state 49
    assignStmt     go to state 50
    condStmt       go to state 51
    loopStmt       go to state 52
    returnStmt     go to state 53
    var            go to state 54
    expression     go to state 55
    addExpr        go to state 56
    term           go to state 57
    factor         go to state 58
    funCallExpr    go to state 59


state 32

   17 formalDecl: typeSpecifier ID LSQ_BRKT . RSQ_BRKT

    RSQ_BRKT  shift, and go to state 60


state 33

   13 funDecl: funcTypeName LPAREN formalDeclList RPAREN funBody .

    $default  reduce using rule 13 (funDecl)


state 34

   15 formalDeclList: formalDeclList COMMA formalDecl .

    $default  reduce using rule 15 (formalDeclList)


state 35

   18 arrayDecl: LSQ_BRKT INTCONST RSQ_BRKT .

    $default  reduce using rule 18 (arrayDecl)


state 36

   21 localDeclList: varDecl localDeclList .

    $default  reduce using rule 21 (localDeclList)


state 37

    6 varDecl: typeSpecifier ID . SEMICLN
    7        | typeSpecifier ID . arrayDecl SEMICLN

    LSQ_BRKT  shift, and go to state 19
    SEMICLN   shift, and go to state 20

    arrayDecl  go to state 21


state 38

   39 var: ID .
   40    | ID . LSQ_BRKT addExpr RSQ_BRKT
   63 funCallExpr: ID . LPAREN @1 argList RPAREN
   65            | ID . LPAREN @2 RPAREN

    LSQ_BRKT  shift, and go to state 61
    LPAREN    shift, and go to state 62

    $default  reduce using rule 39 (var)


state 39

   60 factor: INTCONST .

    $default  reduce using rule 60 (factor)


state 40

   61 factor: CHARCONST .

    $default  reduce using rule 61 (factor)


state 41

   35 loopStmt: KWD_WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 63


state 42

   37 returnStmt: KWD_RETURN . SEMICLN
   38           | KWD_RETURN . expression SEMICLN

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46
    SEMICLN    shift, and go to state 64

    var          go to state 65
    expression   go to state 66
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 43

   33 condStmt: KWD_IF . LPAREN expression RPAREN statement
   34         | KWD_IF . LPAREN expression RPAREN statement KWD_ELSE statement

    LPAREN  shift, and go to state 67


state 44

   36 loopStmt: KWD_FOR . LPAREN forAssign SEMICLN expression SEMICLN forAssign RPAREN statement

    LPAREN  shift, and go to state 68


state 45

   30 compoundStmt: LCRLY_BRKT . statementList RCRLY_BRKT

    ID          shift, and go to state 38
    INTCONST    shift, and go to state 39
    CHARCONST   shift, and go to state 40
    KWD_WHILE   shift, and go to state 41
    KWD_RETURN  shift, and go to state 42
    KWD_IF      shift, and go to state 43
    KWD_FOR     shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    $default  reduce using rule 22 (statementList)

    statementList  go to state 69
    statement      go to state 48
    compoundStmt   go to state 49
    assignStmt     go to state 50
    condStmt       go to state 51
    loopStmt       go to state 52
    returnStmt     go to state 53
    var            go to state 54
    expression     go to state 55
    addExpr        go to state 56
    term           go to state 57
    factor         go to state 58
    funCallExpr    go to state 59


state 46

   57 factor: LPAREN . expression RPAREN

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    expression   go to state 70
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 47

   19 funBody: LCRLY_BRKT localDeclList statementList . RCRLY_BRKT

    RCRLY_BRKT  shift, and go to state 71


state 48

   23 statementList: statement . statementList

    ID          shift, and go to state 38
    INTCONST    shift, and go to state 39
    CHARCONST   shift, and go to state 40
    KWD_WHILE   shift, and go to state 41
    KWD_RETURN  shift, and go to state 42
    KWD_IF      shift, and go to state 43
    KWD_FOR     shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    $default  reduce using rule 22 (statementList)

    statementList  go to state 72
    statement      go to state 48
    compoundStmt   go to state 49
    assignStmt     go to state 50
    condStmt       go to state 51
    loopStmt       go to state 52
    returnStmt     go to state 53
    var            go to state 54
    expression     go to state 55
    addExpr        go to state 56
    term           go to state 57
    factor         go to state 58
    funCallExpr    go to state 59


state 49

   24 statement: compoundStmt .

    $default  reduce using rule 24 (statement)


state 50

   25 statement: assignStmt .

    $default  reduce using rule 25 (statement)


state 51

   26 statement: condStmt .

    $default  reduce using rule 26 (statement)


state 52

   27 statement: loopStmt .

    $default  reduce using rule 27 (statement)


state 53

   28 statement: returnStmt .

    $default  reduce using rule 28 (statement)


state 54

   31 assignStmt: var . OPER_ASGN expression SEMICLN
   58 factor: var .

    OPER_ASGN  shift, and go to state 73

    $default  reduce using rule 58 (factor)


state 55

   29 statement: expression . SEMICLN
   42 expression: expression . relop addExpr

    SEMICLN   shift, and go to state 74
    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    relop  go to state 81


state 56

   41 expression: addExpr .
   50 addExpr: addExpr . addop term

    OPER_ADD  shift, and go to state 82
    OPER_SUB  shift, and go to state 83

    $default  reduce using rule 41 (expression)

    addop  go to state 84


state 57

   49 addExpr: term .
   54 term: term . mulop factor

    OPER_DIV  shift, and go to state 85
    OPER_MUL  shift, and go to state 86

    $default  reduce using rule 49 (addExpr)

    mulop  go to state 87


state 58

   53 term: factor .

    $default  reduce using rule 53 (term)


state 59

   59 factor: funCallExpr .

    $default  reduce using rule 59 (factor)


state 60

   17 formalDecl: typeSpecifier ID LSQ_BRKT RSQ_BRKT .

    $default  reduce using rule 17 (formalDecl)


state 61

   40 var: ID LSQ_BRKT . addExpr RSQ_BRKT

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    addExpr      go to state 88
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 62

   63 funCallExpr: ID LPAREN . @1 argList RPAREN
   65            | ID LPAREN . @2 RPAREN

    RPAREN    reduce using rule 64 (@2)
    $default  reduce using rule 62 (@1)

    @1  go to state 89
    @2  go to state 90


state 63

   35 loopStmt: KWD_WHILE LPAREN . expression RPAREN statement

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    expression   go to state 91
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 64

   37 returnStmt: KWD_RETURN SEMICLN .

    $default  reduce using rule 37 (returnStmt)


state 65

   58 factor: var .

    $default  reduce using rule 58 (factor)


state 66

   38 returnStmt: KWD_RETURN expression . SEMICLN
   42 expression: expression . relop addExpr

    SEMICLN   shift, and go to state 92
    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    relop  go to state 81


state 67

   33 condStmt: KWD_IF LPAREN . expression RPAREN statement
   34         | KWD_IF LPAREN . expression RPAREN statement KWD_ELSE statement

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    expression   go to state 93
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 68

   36 loopStmt: KWD_FOR LPAREN . forAssign SEMICLN expression SEMICLN forAssign RPAREN statement

    ID  shift, and go to state 94

    forAssign  go to state 95
    var        go to state 96


state 69

   30 compoundStmt: LCRLY_BRKT statementList . RCRLY_BRKT

    RCRLY_BRKT  shift, and go to state 97


state 70

   42 expression: expression . relop addExpr
   57 factor: LPAREN expression . RPAREN

    RPAREN    shift, and go to state 98
    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    relop  go to state 81


state 71

   19 funBody: LCRLY_BRKT localDeclList statementList RCRLY_BRKT .

    $default  reduce using rule 19 (funBody)


state 72

   23 statementList: statement statementList .

    $default  reduce using rule 23 (statementList)


state 73

   31 assignStmt: var OPER_ASGN . expression SEMICLN

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    expression   go to state 99
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 74

   29 statement: expression SEMICLN .

    $default  reduce using rule 29 (statement)


state 75

   43 relop: OPER_LTE .

    $default  reduce using rule 43 (relop)


state 76

   44 relop: OPER_LT .

    $default  reduce using rule 44 (relop)


state 77

   45 relop: OPER_GT .

    $default  reduce using rule 45 (relop)


state 78

   46 relop: OPER_GTE .

    $default  reduce using rule 46 (relop)


state 79

   47 relop: OPER_EQ .

    $default  reduce using rule 47 (relop)


state 80

   48 relop: OPER_NEQ .

    $default  reduce using rule 48 (relop)


state 81

   42 expression: expression relop . addExpr

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    addExpr      go to state 100
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 82

   51 addop: OPER_ADD .

    $default  reduce using rule 51 (addop)


state 83

   52 addop: OPER_SUB .

    $default  reduce using rule 52 (addop)


state 84

   50 addExpr: addExpr addop . term

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    term         go to state 101
    factor       go to state 58
    funCallExpr  go to state 59


state 85

   56 mulop: OPER_DIV .

    $default  reduce using rule 56 (mulop)


state 86

   55 mulop: OPER_MUL .

    $default  reduce using rule 55 (mulop)


state 87

   54 term: term mulop . factor

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    factor       go to state 102
    funCallExpr  go to state 59


state 88

   40 var: ID LSQ_BRKT addExpr . RSQ_BRKT
   50 addExpr: addExpr . addop term

    RSQ_BRKT  shift, and go to state 103
    OPER_ADD  shift, and go to state 82
    OPER_SUB  shift, and go to state 83

    addop  go to state 84


state 89

   63 funCallExpr: ID LPAREN @1 . argList RPAREN

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    expression   go to state 104
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59
    argList      go to state 105


state 90

   65 funCallExpr: ID LPAREN @2 . RPAREN

    RPAREN  shift, and go to state 106


state 91

   35 loopStmt: KWD_WHILE LPAREN expression . RPAREN statement
   42 expression: expression . relop addExpr

    RPAREN    shift, and go to state 107
    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    relop  go to state 81


state 92

   38 returnStmt: KWD_RETURN expression SEMICLN .

    $default  reduce using rule 38 (returnStmt)


state 93

   33 condStmt: KWD_IF LPAREN expression . RPAREN statement
   34         | KWD_IF LPAREN expression . RPAREN statement KWD_ELSE statement
   42 expression: expression . relop addExpr

    RPAREN    shift, and go to state 108
    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    relop  go to state 81


state 94

   39 var: ID .
   40    | ID . LSQ_BRKT addExpr RSQ_BRKT

    LSQ_BRKT  shift, and go to state 61

    $default  reduce using rule 39 (var)


state 95

   36 loopStmt: KWD_FOR LPAREN forAssign . SEMICLN expression SEMICLN forAssign RPAREN statement

    SEMICLN  shift, and go to state 109


state 96

   32 forAssign: var . OPER_ASGN expression

    OPER_ASGN  shift, and go to state 110


state 97

   30 compoundStmt: LCRLY_BRKT statementList RCRLY_BRKT .

    $default  reduce using rule 30 (compoundStmt)


state 98

   57 factor: LPAREN expression RPAREN .

    $default  reduce using rule 57 (factor)


state 99

   31 assignStmt: var OPER_ASGN expression . SEMICLN
   42 expression: expression . relop addExpr

    SEMICLN   shift, and go to state 111
    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    relop  go to state 81


state 100

   42 expression: expression relop addExpr .
   50 addExpr: addExpr . addop term

    OPER_ADD  shift, and go to state 82
    OPER_SUB  shift, and go to state 83

    $default  reduce using rule 42 (expression)

    addop  go to state 84


state 101

   50 addExpr: addExpr addop term .
   54 term: term . mulop factor

    OPER_DIV  shift, and go to state 85
    OPER_MUL  shift, and go to state 86

    $default  reduce using rule 50 (addExpr)

    mulop  go to state 87


state 102

   54 term: term mulop factor .

    $default  reduce using rule 54 (term)


state 103

   40 var: ID LSQ_BRKT addExpr RSQ_BRKT .

    $default  reduce using rule 40 (var)


state 104

   42 expression: expression . relop addExpr
   66 argList: expression .

    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    $default  reduce using rule 66 (argList)

    relop  go to state 81


state 105

   63 funCallExpr: ID LPAREN @1 argList . RPAREN
   67 argList: argList . COMMA expression

    RPAREN  shift, and go to state 112
    COMMA   shift, and go to state 113


state 106

   65 funCallExpr: ID LPAREN @2 RPAREN .

    $default  reduce using rule 65 (funCallExpr)


state 107

   35 loopStmt: KWD_WHILE LPAREN expression RPAREN . statement

    ID          shift, and go to state 38
    INTCONST    shift, and go to state 39
    CHARCONST   shift, and go to state 40
    KWD_WHILE   shift, and go to state 41
    KWD_RETURN  shift, and go to state 42
    KWD_IF      shift, and go to state 43
    KWD_FOR     shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    statement     go to state 114
    compoundStmt  go to state 49
    assignStmt    go to state 50
    condStmt      go to state 51
    loopStmt      go to state 52
    returnStmt    go to state 53
    var           go to state 54
    expression    go to state 55
    addExpr       go to state 56
    term          go to state 57
    factor        go to state 58
    funCallExpr   go to state 59


state 108

   33 condStmt: KWD_IF LPAREN expression RPAREN . statement
   34         | KWD_IF LPAREN expression RPAREN . statement KWD_ELSE statement

    ID          shift, and go to state 38
    INTCONST    shift, and go to state 39
    CHARCONST   shift, and go to state 40
    KWD_WHILE   shift, and go to state 41
    KWD_RETURN  shift, and go to state 42
    KWD_IF      shift, and go to state 43
    KWD_FOR     shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    statement     go to state 115
    compoundStmt  go to state 49
    assignStmt    go to state 50
    condStmt      go to state 51
    loopStmt      go to state 52
    returnStmt    go to state 53
    var           go to state 54
    expression    go to state 55
    addExpr       go to state 56
    term          go to state 57
    factor        go to state 58
    funCallExpr   go to state 59


state 109

   36 loopStmt: KWD_FOR LPAREN forAssign SEMICLN . expression SEMICLN forAssign RPAREN statement

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    expression   go to state 116
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 110

   32 forAssign: var OPER_ASGN . expression

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    expression   go to state 117
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 111

   31 assignStmt: var OPER_ASGN expression SEMICLN .

    $default  reduce using rule 31 (assignStmt)


state 112

   63 funCallExpr: ID LPAREN @1 argList RPAREN .

    $default  reduce using rule 63 (funCallExpr)


state 113

   67 argList: argList COMMA . expression

    ID         shift, and go to state 38
    INTCONST   shift, and go to state 39
    CHARCONST  shift, and go to state 40
    LPAREN     shift, and go to state 46

    var          go to state 65
    expression   go to state 118
    addExpr      go to state 56
    term         go to state 57
    factor       go to state 58
    funCallExpr  go to state 59


state 114

   35 loopStmt: KWD_WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 35 (loopStmt)


state 115

   33 condStmt: KWD_IF LPAREN expression RPAREN statement .
   34         | KWD_IF LPAREN expression RPAREN statement . KWD_ELSE statement

    KWD_ELSE  shift, and go to state 119

    $default  reduce using rule 33 (condStmt)


state 116

   36 loopStmt: KWD_FOR LPAREN forAssign SEMICLN expression . SEMICLN forAssign RPAREN statement
   42 expression: expression . relop addExpr

    SEMICLN   shift, and go to state 120
    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    relop  go to state 81


state 117

   32 forAssign: var OPER_ASGN expression .
   42 expression: expression . relop addExpr

    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    $default  reduce using rule 32 (forAssign)

    relop  go to state 81


state 118

   42 expression: expression . relop addExpr
   67 argList: argList COMMA expression .

    OPER_LTE  shift, and go to state 75
    OPER_LT   shift, and go to state 76
    OPER_GT   shift, and go to state 77
    OPER_GTE  shift, and go to state 78
    OPER_EQ   shift, and go to state 79
    OPER_NEQ  shift, and go to state 80

    $default  reduce using rule 67 (argList)

    relop  go to state 81


state 119

   34 condStmt: KWD_IF LPAREN expression RPAREN statement KWD_ELSE . statement

    ID          shift, and go to state 38
    INTCONST    shift, and go to state 39
    CHARCONST   shift, and go to state 40
    KWD_WHILE   shift, and go to state 41
    KWD_RETURN  shift, and go to state 42
    KWD_IF      shift, and go to state 43
    KWD_FOR     shift, and go to state 44
    LCRLY_BRKT  shift, and go to state 45
    LPAREN      shift, and go to state 46

    statement     go to state 121
    compoundStmt  go to state 49
    assignStmt    go to state 50
    condStmt      go to state 51
    loopStmt      go to state 52
    returnStmt    go to state 53
    var           go to state 54
    expression    go to state 55
    addExpr       go to state 56
    term          go to state 57
    factor        go to state 58
    funCallExpr   go to state 59


state 120
